# obs-copernica

./: Cargo.toml  shell.nix
copernica-plugin/: Cargo.toml
copernica-plugin/src/: lib.rs  service.rs  source.rs
obs/: Cargo.toml
obs-copernica/: Cargo.toml
obs-copernica/src/: lib.rs  output.rs  source.rs
obs/src/: lib.rs  module.rs  properties.rs
obs/src/output/: context.rs  ffi.rs  mod.rs  traits.rs
obs/src/service/: ffi.rs  mod.rs  traits.rs
obs/src/source/: ffi.rs  mod.rs  traits.rs
rtmp-plugin/: Cargo.toml
rtmp-plugin/src/: lib.rs  source.rs
