[package]
name = "obs"
version = "0.1.5"
authors = [ "Stewart Mackenzie <sjm@fractalide.com>", "Bennett Hardwick <me@bennetthardwick.com>" ]
edition = "2018"
license = "GPL-2.0"
description = "Safe wrapper of obs-sys"

[dependencies]
obs-sys = { path = "../obs-sys", version = "0.1.2" }
serde_json = "1.0.48"
paste = "0.1.7"
